--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<p>Come Back, my dear friend and Hello World again! Yo</p>
+	<p>Come Back, my dear friend and Hello World again! Yo friend</p>
 </body>
 
 </html>
