--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<link rel="stylesheet" href="css/iconsfont.css">
 	<link rel="stylesheet" href="css/style.min.css">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,19 @@
 </head>
 
 <body>
-	<p>Come Back, my dear friend and Hello World again! Yo friend</p>
+	<div class="wrapper">
+		<header class="header"></header>
+		<section class="about"></section>
+		<section class="services"></section>
+		<section class="skills"></section>
+		<section class="portfolio"></section>
+		<section class="testimonials"></section>
+		<section class="contact"></section>
+		<footer class="footer">
+			<a href="#" class="social fa-brands fa-facebook-f"></a>
+		</footer>
+	</div>
+
 </body>
 
 </html>
