--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header"></header>
+		<header class="header">
+			<div class="container">
+				<div class="upper">
+					<div class="logo">
+						<div class="image"><img src="img/header/Icon.png" alt=""></div>
+						<p class="name">Guzenko labs</p>
+						<p class="description">web/frontend Developer</p>
+					</div>
+					<nav class="navigation">
+						<a href="#" class="nav">Home</a>
+						<a href="#" class="nav">About</a>
+						<a href="#" class="nav">Service</a>
+						<a href="#" class="nav">Portfolio</a>
+						<a href="#" class="nav">Contact</a>
+					</nav>
+				</div>
+				<div class="info">
+					<div class="name">
+						<p class="myname">Sergey Guzenko</p>
+						<p class="mywork">Web / Frontend Developer</p>
+					</div>
+					<div class="buttons">
+						<a href="#" class="button">know more</a>
+						<a href="#" class="button">hire me</a>
+					</div>
+				</div>
+			</div>
+		</header>
 		<section class="about"></section>
 		<section class="services"></section>
 		<section class="skills"></section>
