--- a/index.html
+++ b/index.html
@@ -40,14 +40,174 @@
 				</div>
 			</div>
 		</header>
-		<section class="about"></section>
-		<section class="services"></section>
-		<section class="skills"></section>
-		<section class="portfolio"></section>
-		<section class="testimonials"></section>
-		<section class="contact"></section>
-		<footer class="footer">
-			<a href="#" class="social fa-brands fa-facebook-f"></a>
+		<section class="about">
+			<div class="container">
+				<div class="aboutme">
+					<div class="pagename">KNOW MORE ABOUT ME</div>
+					<div class="about__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+						ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+						ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
+						quis enim.</div>
+					<a href="#" class="button">DOWNLOAD MY CV</a>
+				</div>
+				<div class="aboutimage">
+					<img src="img/about/back.png" alt="" class="aboutimg">
+				</div>
+			</div>
+		</section>
+		<section class="services">
+			<div class="container">
+				<div class="pagename">sERVICES</div>
+				<div class="columns">
+					<div class="columns__column">
+						<div class="columns__column-element">
+							<img src="img/services/1.png" alt="" class="columns__column-element-image">
+							<p class="columns__column-element-name">User Research</p>
+						</div>
+						<div class="columns__column-element">
+							<img src="img/services/4.png" alt="" class="columns__column-element-image">
+							<p class="columns__column-element-name">Looks and Feel
+								Design (UI)</p>
+						</div>
+					</div>
+					<div class="columns__column">
+						<div class="columns__column-element">
+							<img src="img/services/2.png" alt="" class="columns__column-element-image">
+							<p class="columns__column-element-name">IA And Wireframes</p>
+						</div>
+						<div class="columns__column-element">
+							<img src="img/services/5.png" alt="" class="columns__column-element-image">
+							<p class="columns__column-element-name">Delivery</p>
+						</div>
+					</div>
+					<div class="columns__column">
+						<div class="columns__column-element">
+							<img src="img/services/3.png" alt="" class="columns__column-element-image">
+							<p class="columns__column-element-name">User Testing</p>
+						</div>
+						<div class="columns__column-element">
+							<img src="img/services/6.png" alt="" class="columns__column-element-image">
+							<p class="columns__column-element-name">Integration Support</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="skills">
+			<div class="container">
+				<div class="pagename">MY SKILLS</div>
+			</div>
+		</section>
+		<section class="portfolio">
+			<div class="container">
+				<div class="pagename">PORTFOLIO</div>
+				<div class="portfolio__container">
+					<div class="portfolio__row">
+						<div class="portfolio__column">
+							<div class="portfolio__item">
+								<a href="#" class="portfolio__link"><img src="img/portfolio/1.png" alt="" class="img1"></a>
+							</div>
+							<div class="portfolio__item">
+								<a href="#" class="portfolio__link"><img src="img/portfolio/4.png" alt="" class="img1"></a>
+							</div>
+						</div>
+						<div class="portfolio__column">
+							<div class="portfolio__item">
+								<a href="#" class="portfolio__link"><img src="img/portfolio/2.png" alt="" class="img1"></a>
+							</div>
+							<div class="portfolio__item">
+								<a href="#" class="portfolio__link"><img src="img/portfolio/5.png" alt="" class="img1"></a>
+							</div>
+						</div>
+						<div class="portfolio__column">
+							<div class="portfolio__item">
+								<a href="#" class="portfolio__link"><img src="img/portfolio/3.png" alt="" class="img1"></a>
+							</div>
+							<div class="portfolio__item">
+								<a href="#" class="portfolio__link"><img src="img/portfolio/6.png" alt="" class="img1"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<a href="#" class="button">LOAD MORE</a>
+			</div>
+		</section>
+		<section class="testimonials">
+			<div class="container">
+				<div class="pagename">TESTIMONIALS</div>
+				<div class="bio">
+					<div class="bio__row">
+						<img src="img/testimonals/girl.png" alt="" class="bio__img">
+						<div class="bio__column">
+							<p class="bio__name">Limara tusi</p>
+							<p class="bio__work">CEO, RanDOM COMPANY</p>
+							<p class="bio__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec</p>
+						</div>
+					</div>
+					<div class="slider">
+						<a href="#" class="slider__option"></a>
+						<a href="#" class="slider__option"></a>
+						<a href="#" class="slider__option"></a>
+					</div>
+				</div>
+			</div>
+			<div class="results">
+				<div class="container">
+					<div class="results__imglist">
+						<img src="img/testimonals/study.png" alt="" class="results__item-img">
+						<img src="img/testimonals/happiness.png" alt="" class="results__item-img">
+						<img src="img/testimonals/delivery-complete.png" alt="" class="results__item-img">
+						<img src="img/testimonals/cup.png" alt="" class="results__item-img">
+					</div>
+					<div class="results__row">
+						<div class="results__item">
+							<p class="results__number">120</p>
+							<p class="results__description">Hands to Work</p>
+						</div>
+						<div class="results__item">
+							<p class="results__number">310</p>
+							<p class="results__description">Happy Client</p>
+						</div>
+						<div class="results__item">
+							<p class="results__number">510</p>
+							<p class="results__description">Finished Project</p>
+						</div>
+						<div class="results__item">
+							<p class="results__number">720</p>
+							<p class="results__description">Cups of Coffee</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer class="contact">
+			<div class="container">
+				<div class="pagename">Say Hello</div>
+				<form action="" method="post" class="form">
+					<div class="form__row">
+						<input type="text" class="form__name" id="1" placeholder="Name">
+						<input type="email" class="form__email" id="2" placeholder="Email">
+					</div>
+					<textarea name="message" id="3" cols="30" rows="10" class="form__message" placeholder="Message"></textarea>
+					<button class="form__button button" id="4">send<img src="img/contact/send-button.png" alt=""
+							class="sendimg"></button>
+				</form>
+			</div>
+			<div class="footerend">
+				<div class="container">
+					<div class="soc">
+						<a href="#" class="social fa-brands fa-facebook-f"></a>
+						<a href="#" class="social fa-brands fa-twitter"></a>
+						<a href="#" class="social fa-brands fa-linkedin-in"></a>
+						<a href="#" class="social fa-brands fa-google-plus-g"></a>
+						<a href="#" class="social fa-brands fa-behance"></a>
+						<a href="#" class="social fa-brands fa-dribbble"></a>
+					</div>
+					<div class="copyright">
+						2022. All Rights Reserved
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 
