--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 </head>
 
 <body>
+	
 	<div class="wrapper">
 		<header class="header">
 			<div class="container">
+				<a id="upbutton" onclick="topFunction()" id="upbutton">
+					<img src="img/topbutton.jpg" alt="Top" border="none" title="Наверх">
+				</a>
 				<div class="upper">
 					<div class="logo">
 						<div class="image"><img src="img/header/Icon.png" alt=""></div>
@@ -21,11 +25,11 @@
 						<p class="description">web/frontend Developer</p>
 					</div>
 					<nav class="navigation">
-						<a href="#" class="nav">Home</a>
-						<a href="#" class="nav">About</a>
-						<a href="#" class="nav">Service</a>
-						<a href="#" class="nav">Portfolio</a>
-						<a href="#" class="nav">Contact</a>
+						<a href="#home" class="nav">Home</a>
+						<a href="#about" class="nav">About</a>
+						<a href="#services" class="nav">Services</a>
+						<a href="#portfolio" class="nav">Portfolio</a>
+						<a href="#contact" class="nav">Contact</a>
 					</nav>
 				</div>
 				<div class="info">
@@ -40,13 +44,15 @@
 				</div>
 			</div>
 		</header>
-		<section class="about">
+		<section class="about" id="about">
 			<div class="container">
 				<div class="aboutme">
 					<div class="pagename">KNOW MORE ABOUT ME</div>
 					<div class="about__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-						ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-						ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
+						ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
+						nascetur
+						ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+						massa
 						quis enim.</div>
 					<a href="#" class="button">DOWNLOAD MY CV</a>
 				</div>
@@ -55,7 +61,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="services">
+		<section class="services" id="services">
 			<div class="container">
 				<div class="pagename">sERVICES</div>
 				<div class="columns">
@@ -98,7 +104,7 @@
 				<div class="pagename">MY SKILLS</div>
 			</div>
 		</section>
-		<section class="portfolio">
+		<section class="portfolio" id="portfolio">
 			<div class="container">
 				<div class="pagename">PORTFOLIO</div>
 				<div class="portfolio__container">
@@ -134,20 +140,40 @@
 		</section>
 		<section class="testimonials">
 			<div class="container">
-				<div class="pagename">TESTIMONIALS</div>
+				<div class="pagename">OUR CLIENTS</div>
 				<div class="bio">
-					<div class="bio__row">
+					<div class="bio__prevbutton" id="prev"></div>
+					<div class="bio__row active">
 						<img src="img/testimonals/girl.png" alt="" class="bio__img">
 						<div class="bio__column">
 							<p class="bio__name">Limara tusi</p>
 							<p class="bio__work">CEO, RanDOM COMPANY</p>
-							<p class="bio__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec</p>
+							<p class="bio__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+								commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
+								montes, nascetur ridiculus mus. Donec quam felis, ultricies nec</p>
 						</div>
 					</div>
+					<div class="bio__row">
+						<img src="img/testimonals/zelensky.jpg" alt="" class="bio__img">
+						<div class="bio__column">
+							<p class="bio__name">Vladimir Zelensky</p>
+							<p class="bio__work">President of Ukraine</p>
+							<p class="bio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate maxime asperiores illum facere, voluptatem dignissimos quasi laborum expedita voluptas voluptatum explicabo nemo accusantium nostrum et?</p>
+						</div>
+					</div>
+					<div class="bio__row">
+						<img src="img/testimonals/musk.jpg" alt="" class="bio__img">
+						<div class="bio__column">
+							<p class="bio__name">Elon Musk</p>
+							<p class="bio__work">CEO, TESLA & SPACEX</p>
+							<p class="bio__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, ipsum dolorum atque totam harum fugit eveniet natus laboriosam nihil, voluptas aliquid cumque repudiandae! Earum rem voluptate pariatur. Quibusdam, rerum ad?</p>
+						</div>
+					</div>
+					<div class="bio__nextbutton" id="next"></div>
 					<div class="slider">
-						<a href="#" class="slider__option"></a>
-						<a href="#" class="slider__option"></a>
-						<a href="#" class="slider__option"></a>
+						<a class="slider__option active"></a>
+						<a class="slider__option"></a>
+						<a class="slider__option"></a>
 					</div>
 				</div>
 			</div>
@@ -180,7 +206,7 @@
 				</div>
 			</div>
 		</section>
-		<footer class="contact">
+		<footer class="contact" id="contact">
 			<div class="container">
 				<div class="pagename">Say Hello</div>
 				<form action="" method="post" class="form">
@@ -188,7 +214,8 @@
 						<input type="text" class="form__name" id="1" placeholder="Name">
 						<input type="email" class="form__email" id="2" placeholder="Email">
 					</div>
-					<textarea name="message" id="3" cols="30" rows="10" class="form__message" placeholder="Message"></textarea>
+					<textarea name="message" id="3" cols="30" rows="10" class="form__message"
+						placeholder="Message"></textarea>
 					<button class="form__button button" id="4">send<img src="img/contact/send-button.png" alt=""
 							class="sendimg"></button>
 				</form>
@@ -210,7 +237,7 @@
 			</div>
 		</footer>
 	</div>
-
+	<script src="js/script.js"></script>
 </body>
 
 </html>
